# SmartAM

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  TODO.md  ai-native-mailer.md  mise.toml  screens.drawio
.github/workflows/: ci.yml
.kiro/steering/: aidlc-session.md  principles.md  product.md  project.md  release.md  structure.md  tech.md  workflow.md
aidlc-docs/: aidlc-state.md  audit.md
aidlc-docs/construction/plans/: idle-watcher-code-generation-plan.md  idle-watcher-functional-design-plan.md  unit1-code-generation-plan.md  unit2-3-code-generation-plan.md  unit5-code-generation-plan.md
aidlc-docs/inception/application-design/: application-design.md  component-dependency.md  component-methods.md  components.md  services.md  unit-of-work-dependency.md  unit-of-work-story-map.md  unit-of-work.md
aidlc-docs/inception/plans/: application-design-plan.md  execution-plan.md  iteration4-execution-plan.md  (+1 more)
app/: README.md  package-lock.json  package.json  vitest.config.ts
app/scripts/: check-csp-hash.mjs
app/src/: app.css  app.html
app/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
app/src-tauri/.cargo/: config.toml
app/src-tauri/capabilities/: default.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: ai_client.rs  ai_usage.rs  calendar.rs  error.rs  ics_parser.rs  idle_watcher.rs  imap_client.rs  keychain.rs  lib.rs  main.rs  oauth.rs  smtp_client.rs  trace.rs  tray.rs
design_handoff_smartam_rebrand/: 01-design-system.html  02-logo-deliverables.html  03-app-ui-sample.html  04-button-proposal.html  05-banners.html  README.md
(+50 files in other folders)
