[package]
name = "app"
version = "0.1.9"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = [] }
tauri-plugin-log = "2"
tauri-plugin-store = "2"
tauri-plugin-notification = "2"
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2"
chrono = "0.4"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "time"] }
imap = "2"
imap-proto = "0.10"
futures = "0.3"
native-tls = "0.2"
lettre = { version = "0.11", features = ["tokio1-native-tls", "builder"] }
mailparse = "0.15"
reqwest = { version = "0.12", features = ["json"] }
base64 = "0.22"
dirs = "6"
dotenvy = "0.15.7"
open = "5"
ical = "0.11"
